# aeolus

source/: CMakeLists.txt  Makefile  a_thread.cc  addsynth.cc  addsynth.h  asection.cc  asection.h  audio.cc  audio.h  audiowin.cc  audiowin.h  button.cc  callbacks.h  clalsadrv.cc  clalsadrv.h  clthreads.h  clxclient.h  division.cc  division.h  editwin.cc  editwin.h  enumip.cc  exp2ap.cc  functionwin.cc  functionwin.h  global.h  iface.h  imidi-osx.cc  imidi.cc  imidi.h  instrwin.cc  instrwin.h  itc_ctrl.cc  itc_ip1q.cc  itc_mesg.cc  lfqueue.cc  lfqueue.h  main.cc  mainwin.cc  mainwin.h  (+40 more)
